[FIX] web: alignment of select and many2one in reference
This commit fixes fixes the alignment issue of the select and the
following many2one field in a reference field. When a longer value
is selected in the first dropdown, it leaves too little space for
the subsequent field.

Steps to reproduce:
- Open Calendar app
- Open a record
- Choose a longer value in the first select in 'Linked to' field
=> There is very little space left for the many2one field.

Task-5106718

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -169,6 +169,15 @@
             flex: 1 1 auto;
             width: auto !important;
         }
+
+        .o_field_reference .o_row {
+            select.o_input, .o_many2one {
+                flex: 1;
+            }
+            select.o_input {
+                padding-right: 1rem;
+            }
+        }
     }
 
     .o_form_view_container {
